--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-div {
-  height: 20px;
-  width: auto;
-  border: 1px black solid;
-}
 .counter-reset {
   counter-reset: meuContador;
 }
@@ -10,7 +5,7 @@ div {
   content: counter(meuContador);
 }
 .up-counter:hover {
-  counter-increment: meuContador;
+  counter-increment: meuContador + 1;
 }
 
 /* .up-counter:hover {
